# Python-Daily-learning

./: .breakpoints  README.md  main.py  pyproject.toml
Practice problems/: LessthanTen.py  cInput.py  cLoop.py  evenodd.py  idea.txt  phoneNumber.py  read.md
Programs/: EmlandPhnmFinder.py  GuessTheNumber.py  RegxProg.py  Todolist.py  bandname.py  coffeeMaker.py  pNumFinder.py  phoneNumber.py  prettyTableex.py  ticktactoe.py
Programs/CoffeeMaker program/: coffee_machine.py
Programs/True False quiz program/: data.py  main.py  quiz_brain.py
Tutorial/: BasicQuestionProgram.py  Def_program.py  Dictonaries.py  Elif_program.py  List_type.py  Methods.py  Mutable_immutable.py  Tryexceptprob.py  Variable_types.py  While_Program.py  advancedstrings.py  datastructures.py  stringformatting.py  tryandexcept.py
Tutorial/Regular expressions/: regCases.py  regFindall.py  regxGroup.py  regxSub.py
